# the-project

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rustfmt.toml
.cargo/: config.toml
apps/www/: Cargo.toml  api.rs  bun.lockb  package.json  svelte.config.js  tailwind.config.js
apps/www/routes/: +layout.svelte  +page.svelte  mod.rs
apps/www/www-root/styles/: app.pcss
crates/auth-rs/: Cargo.toml
crates/auth-rs/examples/: axum.rs
crates/auth-rs/src/: bearer.rs  lib.rs
crates/auth-rs/src/oauth/: mod.rs
crates/auth-rs/src/u_auth/: mod.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/crypto/src/encoding/: base64.rs  mod.rs
crates/crypto/src/hashing/: mod.rs
crates/validator-macro/: Cargo.toml
scripts/: setup.sh
the-project/: Cargo.toml  alembic.ini
the-project/migrations/: env.py
the-project/src/: lib.rs  main.rs
www/: .gitignore  bun.lockb  package.json
