[workspace]
resolver = "2"
members = [
# Apps
    # www - is the main/core server
    "apps/www",

# Packages
    "packages/auth-rs",
    "packages/common-rs",
    "packages/crypto",
    "packages/users",
    "packages/validator-macro"
]

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
derive-new = "0.6.0"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.40.0", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.lints.rust]
unsafe_code = "forbid"
