[workspace]
members = [
  # Apps
  "the-project", # Packages
  "crates/auth-rs",
  "crates/crypto",
  "crates/validator-macro",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
derive-new = "0.7.0"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.40.0", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.lints.rust]
unsafe_code = "forbid"
