[package]
name = "the-project"
version = "0.1.0"
edition = "2021"

[features]
default = ["tower"]
tower = ["dep:tower-layer", "dep:tower-service"]


[dependencies]
axum = "0.7.5"
tower = { version = "0.5.0", features = ["full"] }
tower-http = "0.5.2"
tower-layer = { version = "0.3.3", optional = true }
tower-service = { version = "0.3.3", optional = true }

# Workspace dependencies
async-trait = { workspace = true }
tokio = { workspace=true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
derive-new = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
anyhow = { workspace=true }
bytes = "1.7.1"
futures-util = "0.3.30"
http-body = "1.0.1"
http-body-util = "0.1.2"
