[package]
name = "the-project"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.82"
axum = "0.7.5"
derive-new = "0.7.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = "0.5.2"
tower-layer = { version = "0.3.3" }
tower-service = { version = "0.3.3" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
anyhow = "1.0.87"
bytes = "1.7.1"
futures-util = "0.3.30"
http-body = "1.0.1"
http-body-util = "0.1.2"
