[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"

[features]
default=["dev"]
dev=["oauth", "bearer", "jwt", "cookie", "axum"]
oauth=[]
bearer=[]
jwt=[]
cookie=[]
axum = ["dep:axum-core"]


[dependencies]
async-trait = "0.1.81"
axum-core = { version = "0.4.3", optional = true }
http = "1.1.0"
tower-layer = "0.3.3"
tower-service = "0.3.3"

#  Workspace
derive-new = { workspace = true }


[lints]
workspace = true

[dev-dependencies]
anyhow = { workspace=true }
bytes = "1.7.1"
futures-util = "0.3.30"
http-body = "1.0.1"
http-body-util = "0.1.2"
tokio = { workspace=true, features = ["full"] }
tower = { version = "0.5.0", features = ["full"] }
